css changes done

--- a/index.html
+++ b/index.html
@@ -146,29 +146,29 @@
             <div class="images">
             <div class="item13">
                 <div class="polaroid13">
-                    <img  src="./images/fuji.jpg" alt="mount fuji" />
-                    <div class="caption13">Mt.Fuji</div>
+                    <img  src="./images/barrier-reef.jpg" alt="great barrier reef" />
+                    <div class="caption13">Great Barrier Reef</div>
                 </div>
             </div>
         
             <div class="item14">
                 <div class="polaroid14">
-                    <img  src="./images/kinkaku-ji.jpg" alt="kinkaku-ji" />
-                    <div class="caption14">Kinkaku Ji</div>
+                    <img  src="./images/opera.jpg" alt="opera house" />
+                    <div class="caption14">Opera House</div>
                 </div>
             </div>
 
             <div class="item15">
                 <div class="polaroid15">
-                    <img  src="./images/fushimi.jpg" alt="fushimi" />
-                    <div class="caption15">Fushimi Inari</div>
+                    <img  src="./images/bridge.jpg" alt="sydney harbour bridge" />
+                    <div class="caption15">Sydney Harbour Bridge</div>
                 </div>
             </div>
 
             <div class="item16">
                 <div class="polaroid16">
-                    <img  src="./images/nara.jpg" alt="Nara park" />
-                    <div class="caption16">Nara park</div>
+                    <img  src="./images/bondi.jpg" alt="bondi beach" />
+                    <div class="caption16">Bondi beach</div>
                 </div>
             </div>
         </div>
