--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div class="whole" style="position: relative;">
         <div class="paris" id="paris">
              <h1>Paris</h1>
-            <p>Paris, France's capital, is a major European city and a global center for art, fashion, gastronomy and culture. Its 19th-century cityscape is crisscrossed by wide boulevards and the River Seine. Beyond such landmarks as the Eiffel Tower and the 12th-century, Gothic Notre-Dame cathedral, the city is known for its cafe culture and designer boutiques along the Rue du Faubourg Saint-Honoré.</p>
+            <p>Paris, France's capital, is a major European city and a global center for art, fashion, gastronomy and culture. Its 19th-century cityscape is crisscrossed by wide boulevards and the River Seine. Beyond such landmarks as the Eiffel Tower, Gothic Notre-Dame cathedral, the city is known for its cafe culture and designer boutiques</p>
            
             <div class="pics">
             <div class="images">
